# social-mcp

./: .gitignore  README.md  README.zh.md  pyproject.toml
config/: credentials.example.yaml
src/personal_social_mcp/: _rate_limiter.py  twitter_server.py  xhs_server.py
src/social_mcp/: twitter_server.py  xhs_browser.py  xhs_client.py  xhs_server.py
