[project]
name = "personal-social-mcp"
version = "0.1.0"
description = "Personal MCP wrappers for Xiaohongshu and Twitter/X — rate-limited CLI adapters"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "social-mcp" },
]
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
psm-xhs = "personal_social_mcp.xhs_server:main"
psm-twitter = "personal_social_mcp.twitter_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 160
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
