[project]
name = "social-mcp"
version = "0.1.0"
description = "MCP adapters for Xiaohongshu (小红书) and Twitter/X"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
social-mcp-xhs = "social_mcp.xhs_server:main"
social-mcp-twitter = "social_mcp.twitter_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
